--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -44,3 +44,7 @@ sansible_gocd_agent_dependencies_skip_java: yes
 sansible_gocd_server_version: 19.*
 sansible_gocd_server_passwd_users:
         hmj: "{{ lookup('env','GOCD_HMJ_PASSWD') }}"
+
+#NODEJS
+nodejs_npm_global_packages:
+  - name: gatsby
